# fast_api

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
fast_api/: app.py  db.py  schema.py  settings.py
tests/: conftest.py  test_app.py
