[project]
name = "fast-api"
version = "0.1.0"
description = ""
authors = [
    {name = "jvecodev",email = "jvitor.oliveira1803@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13, <4.0"
dependencies = [
    "fastapi[standard] (>=0.115.14,<0.116.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.1"

# configurations
# configurações de formatações

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

# preview mostra oq esta errado no codigo
# select mostra os erros que o ruff vai mostrar
[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']
