[tool.poetry]
name = "fast-api"
version = "0.1.0"
description = "FastAPI application with MongoDB"
authors = ["jvecodev <jvitor.oliveira1803@gmail.com>"]
readme = "README.md"
packages = [{include = "fast_api"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.14"}
pydantic-settings = "^2.10.1"
uvicorn = {extras = ["standard"], version = "^0.35.0"}
motor = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.1"

# configurations
# configurações de formatações
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
taskipy = "^1.14.1"

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

# preview mostra oq esta errado no codigo
# select mostra os erros que o ruff vai mostrar
[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

# no pythonpath é utilizado para definir o caminho do projeto
[tool.pytest.ini_options]
pythonpath = "." 
addopts = '-p no:warnings'

# taskipy é utilizado para definir tarefas que podem ser executadas via terminal, são atalhos
[tool.taskipy.tasks]
test = 'pytest -s -x --cov=fast_api -v'
post_test = 'coverage html'



